fix gap

--- a/capstone-showcase/src/Menu.css
+++ b/capstone-showcase/src/Menu.css
@@ -124,6 +124,7 @@ li {
   color: black;
   justify-content: baseline;
   align-items: center;
+  gap: 25px;
   /* font-size: 1.15rem; */
 }
 /* Department dropdown hidden by default, shown on hover */
